stoat/src/snapshots/stoat__test_harness__badge_active.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 40x10
---
[0m[7m [0m               [0m[33m╭──────╮[0m
                [0m[33m│[0m[97mclaude[0m[33m⢸[0m
                [0m[33m╰──────╯[0m






[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]           1:1 [0m
