stoat/src/snapshots/stoat__test_harness__badge_active_styled.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 40x10
---
[0m[36m┌───────────────[0m[33m╭─────⠉╮[0m[36m───────────────┐[0m
[0m[36m│[0m[7m [0m              [0m[33m│[0m[97mclaude[0m[33m│[0m               [0m[36m│[0m
[0m[36m│[0m               [0m[33m╰──────╯[0m               [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m│[0m                                      [0m[36m│[0m
[0m[36m└──────────────────────────────────────┘[0m
