stoat/src/snapshots/stoat__test_harness__badge_complete.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 40x10
---
[0m[7m [0m               [0m[38;2;78;201;176m╭──────╮[0m
                [0m[38;2;78;201;176m│[0m[38;2;204;204;204mclaude[0m[38;2;78;201;176m│[0m
                [0m[38;2;78;201;176m╰──────╯[0m






[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;128;128;128m (unnamed) [0m[38;2;204;204;204m[48;2;128;128;128m[scratch]           1:1 [0m
