stoat/src/snapshots/stoat__test_harness__badge_workspace_and_global_stacked.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 40x10
---
[0m[7m [0m            [0m[38;2;220;220;170m╭───╮[0m [0m[38;2;220;220;170m╭──────╮[0m
             [0m[38;2;220;220;170m│[0m[38;2;204;204;204mrun[0m[38;2;220;220;170m│[0m [0m[38;2;220;220;170m│[0m[38;2;204;204;204mclaude[0m[38;2;220;220;170m⢸[0m
             [0m[38;2;220;220;170m╰─⣀─╯[0m [0m[38;2;220;220;170m╰──────╯[0m






[0m[1m[30m[48;2;78;201;176m PMT [0m[1m[38;2;204;204;204m[48;2;30;30;30m (unnamed) [0m[38;2;204;204;204m[48;2;30;30;30m[scratch]           1:1 [0m
